# example_better_auth_with_nextjs_and_fastapi_as_backend

./: .gitignore  README.md
backend/: .env.example  README.md  database.py  main.py  models.py  pyproject.toml  verify_session_token.py
frontend/: .env.example  auth.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/logout/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/lib/: auth-client.ts
